# bash_history_inspector

./: .gitignore  README.md  history_inspector.py  pyproject.toml  tss.ipynb
app/: application.py  main.py
app/cli/: __init__.py
app/config/: __init__.py
app/lexicon/: __init__.py
app/log_inspector/: abc_inspector.py  standart_library_inspector.py
app/logger/: __init__.py
app/models/: log.py  log_container.py
app/utils/: actions.py  application_types.py  errors.py  singleton.py
lexicon/: __init__.py
tests/: conftest.py  test_argument_parser.py  test_file_methods.py  test_lexicon.py  test_log.py  test_log_container.py
